[project]
name = "sprockets-typed"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dave Shawley", email = "daveshawley@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pydantic~=2.11", "tornado~=6.4"]

[project.scripts]
sprockets-typed = "sprockets_typed:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "coverage~=7.10",
  "mkdocs-material>=9.6.18",
  "mkdocs>=1.6.1",
  "mkdocstrings-python-xref>=1.16.3",
  "mkdocstrings[python]>=0.30.0",
  "mypy~=1.17",
  "pre-commit~=4.3",
  "pytest~=8.4",
  "ruff~=0.12.10",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/sprockets_typed"]

[tool.mypy]
mypy_path = ["typings"]
strict = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "LOG",
  "N",
  "PIE",
  "PL",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["RSE102", "TRY003"]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.format]
quote-style = "single"
